# human-mcp

./: .gitignore  README.md  permissions.yaml  pyproject.toml
audit-log/: .gitignore
docs/: index.html
personas/john-doe/: calendar.yaml  contacts.yaml  identity.yaml  projects.yaml  reading-list.yaml  writing-style.yaml
src/: audit.py  permissions.py  server.py
src/modules/: persona.py
